<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhotoDetailActivity">

    <TextView
        android:id="@+id/authorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Загрузил: "
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/detailImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="3dp"
        android:layout_below="@id/authorLabel"
        android:scaleType="fitCenter" />

    <EditText
        android:id="@+id/commentEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/placeholderComment"
        android:layout_below="@id/detailImageView"/>

    <Button
        android:id="@+id/postCommentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnComment"
        android:layout_below="@id/commentEditText"/>

    <TextView
        android:id="@+id/commentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commentLabel"
        android:layout_below="@id/postCommentButton"
        android:textSize="30sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/commentsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/commentLabel"
        android:layout_above="@+id/deleteButton"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteTxt"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="20sp"/>

</RelativeLayout>
